@startuml Diagrama de Clases M4A

' Definición de estilos
skinparam class {
    BackgroundColor white
    ArrowColor black
    BorderColor black
}

enum TareaEstado {
    PENDIENTE
    EN_PROGRESO
    COMPLETADA
    VENCIDA
}

class Usuario {
    id: Integer (PK)
    nombre: String(100)
    email: String(100)
    password_hash: String(255)
    is_active: Boolean
    fecha_creacion: DateTime
    fecha_actualizacion: DateTime
    --
    __repr__()
}

class Materia {
    id: Integer (PK)
    nombre: String(100)
    descripcion: Text
    usuario_id: Integer (FK)
    fecha_creacion: DateTime
    fecha_actualizacion: DateTime
    --
    __repr__()
}

class Tarea {
    id: Integer (PK)
    titulo: String(200)
    descripcion: Text
    fecha_limite: Date
    estado: TareaEstado
    materia_id: Integer (FK)
    fecha_creacion: DateTime
    fecha_actualizacion: DateTime
    --
    __repr__()
}

class Nota {
    id: Integer (PK)
    titulo: String(200)
    contenido: Text
    materia_id: Integer (FK)
    origen_audio: String(255)
    fecha_creacion: DateTime
    fecha_actualizacion: DateTime
    --
    __repr__()
}

class Archivo {
    id: Integer (PK)
    nombre: String(255)
    ruta: String(512)
    tipo: String(100)
    tamaño: Integer
    materia_id: Integer (FK)
    fecha_creacion: DateTime
    --
    __repr__()
}

Usuario "1" -- "n" Materia : tiene >
Materia "1" -- "n" Tarea : contiene >
Materia "1" -- "n" Nota : contiene >
Materia "1" -- "n" Archivo : contiene >
Tarea -- TareaEstado : tiene estado >

@enduml